# fuse_project_1

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py  models.py
app/services/: __init__.py  currency_service.py
streamlit_app/: app.py
tests/: test_api.py
