[tool.poetry]
name = "currency-converter"
version = "0.1.0"
description = "A FastAPI-based currency conversion microservice"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"
redis = "^5.0.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
python-dotenv = "^1.0.0"
streamlit = "^1.28.0"
pandas = "^2.1.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 127

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
